k8s/base/05-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: stride
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      # Wait for Postgres to be reachable before running prisma migrate deploy
      containers:
        - name: api
          image: bhopathivardhan1/stride-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 512Mi
          readinessProbe:
            tcpSocket:
              port: 4000
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 4000
            initialDelaySeconds: 40
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: stride
spec:
  selector:
    app: api
  ports:
    - port: 4000
      targetPort: 4000
